--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,16 @@ form {
         background-position-x: 50% !important;
         padding: 30% 5% !important;
 }
+@media screen and (max-width: 980px) {
+    /* Define width for small screens */
+    .swal2-popup.custom-swal-width {
+        width: 100% !important;
+    }
+}
+.swal2-popup.custom-swal-width {
+    width: 200%;
+}
+
 }
 .fixed-element {
     position: fixed;
