--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ form {
 @media screen and (max-width: 980px) {
     /* Define width for small screens */
     .swal2-popup.custom-swal-width {
-        width: 100% !important;
+        min-width: 475px !important;
     }
 
     .swal2-popup.custom-swal-width section {
@@ -111,13 +111,10 @@ form {
     
     /* Adjust font size for all text inside the SweetAlert */
     .swal2-popup {
-        font-size: 14px !important;
+        font-size: 12px !important;
     }
-    
-    .swal2-popup.custom-swal-width li {
-        margin-bottom: 10px !important; /* Add some space between list items */
-        padding-right: 15px !important; /* Add padding on the right */
-        padding-left: 15px !important; /* Add padding on the left */
+    .swal2-popup h2{
+        font-size: 30px;
     }
 }
 
